fixed footer gap

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,4 @@
 .footer {
-    margin-top: 5rem;
     width: 100%;
     height: 15rem;
     background-color: var(--primary-dark);
